# cudaq_applications

RUS gate demo/: .gitignore  setup.cfg
RUS gate demo/examples/: choi_targets.npy  ex_batching_time.py  ex_convergence.py  ex_process_map.py  ex_profile.py  plotting.py
RUS gate demo/rus_trion/: liouvillian.py
benchmarks/: evolve_profile.py  mesolve_profile.py  plotting.py  qutip_benchmark.py  zpg_benchmark.py  zpg_profile.py
benchmarks/data/: results_cudaq.json  results_qutip.json
benchmarks/data/multi point/: results_cudaq.json  results_qutip.json  results_zpg.json
benchmarks/data/single point/: results_cudaq.json  results_cudaq_lind.json  results_qutip.json  results_zpg.json
gate_simulations/: choi_matrices.npy  circuits.py  plotting.py  simulate.py
gate_simulations/data/cz_ideal/: choi_matrices.npy
gate_simulations/data/cz_noisy/: choi_matrices.npy
ruscz_cudaq/: README.md
ruscz_cudaq/examples/: ex_convergence.py  ex_process_map.py  ex_profile.py  plotting.py
ruscz_cudaq/rus_trion/: config.py  evolve.py  states.py  utils.py
ruscz_cudaq/tests/: conftest.py  test_cz_pnr.py
