[metadata]
name = rus_trion
version = 0.1.0
description = RUS trion Liouvillian sims with CUDA-Q, Overhauser noise, and Choi extraction
author = Stephen C. Wein
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24

[options.extras_require]
dev =
    pytest>=7
    pytest-cov>=4
    black>=24.0
    isort>=5.13
    mypy>=1.10
